# homework1

./: CMakeLists.txt  CMakePresets.json
.github/workflows/: cmake_gtest.yml
src/: Solver.cpp  Solver.h
tests/: CMakeLists.txt  SolverTest.cpp
